test/expected/explain_fn.out
explain void f(t x)
                 ^
18: syntax error: "x": ',' expected
